--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<link rel="Stylesheet" href="seman/semantic.css">
-	<script href="seman/semantic.js"></script>
+	<link rel="Stylesheet" href="semantic/semantic.css">
+	<script href="semantic/semantic.js"></script>
 <body>
 <div class="ui container raised segment">
 <div class="ui form">
