--- a/lay.html
+++ b/lay.html
@@ -1,6 +1,6 @@
 
-<link rel="Stylesheet" href="seman/semantic.css"/>
-<script href="seman/semantic.js"></script>
+<link rel="Stylesheet" href="semantic/semantic.css"/>
+<script href="semantic/semantic.js"></script>
 <div class="ui inverted segment">
   <div class="ui three column grid">
     <div class="ui four wide column">
